<resources>
    <string name="app_name">Contact List</string>
    <string name="add_contact_fab_content_description">Add new contact</string>
    <string name="create_new_contact_title">Create New Contact</string>
    <string name="name_edit_text_hint">Name</string>
    <string name="phone_number_edit_text_hint">Phone Number</string>
    <string name="save_button_text">Save</string>
    <string name="create_account_heading">CREATE ACCOUNT</string>
    <string name="sign_up_btn_text">Sign up</string>
    <string name="sign_in_btn_text">Sign in</string>
    <string name="email_edit_text_hint">Email</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="confirm_password_edit_text_hint">Confirm Password</string>
    <string name="login_header_text">LOGIN</string>
</resources>