<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".activities.SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="20dp"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account_heading"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="4dp"
                    android:hint="@string/name_edit_text_hint"
                    android:inputType="textPersonName"
                    android:padding="5dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_email_field"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="4dp"
                    android:hint="@string/email_edit_text_hint"
                    android:inputType="textEmailAddress"
                    android:padding="5dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:drawableStart="@drawable/ic_key"
                    android:drawablePadding="4dp"
                    android:hint="@string/password_edit_text_hint"
                    android:inputType="textPassword"
                    android:padding="5dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_confirm_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:drawableStart="@drawable/ic_key"
                    android:drawablePadding="4dp"
                    android:hint="@string/confirm_password_edit_text_hint"
                    android:inputType="textPassword"
                    android:padding="5dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up_btn_text"
                app:backgroundTint="@color/purple_200" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:text="@string/sign_in_btn_text"
                android:textColor="@color/purple_200"
                app:backgroundTint="@android:color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>