<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".activities.LogInActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:paddingTop="20dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_header_text"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_email_field"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/email_edit_text_hint"
                    android:padding="5dp"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="4dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/password_edit_text_hint"
                    android:padding="5dp"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_key"
                    android:drawablePadding="4dp" />
            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.button.MaterialButton
               android:id="@+id/sign_in_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/sign_in_btn_text"
                app:backgroundTint="@color/purple_200" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>